Test to update TWA

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#F6B451" />
     <meta
-      name="Star Market"
-      content="Swap stars for dust"
+      name="Te Wāhi Auaha"
+      content="A new kind of makerspace"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -47,7 +47,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <title>Star Market</title>
+    <title>Te Wāhi Auaha</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
