--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
     <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#abceff">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#abceff">
+    <meta name="theme-color" content="#FFFFFF">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#abceff" />
+    <meta name="theme-color" content="#FFFFFF" />
     <meta
       name="Te Wāhi Auaha"
       content="A new kind of makerspace"
