--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
     <meta name="msapplication-TileColor" content="#FFFFFF">
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#FFFFFF">
+    
+    <meta property="og:image" content="https://media.tewahi.com/og.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFFFFF" />
