--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <meta name="msapplication-TileColor" content="#FFFFFF">
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#FFFFFF">
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="b1e6814e-6450-40ce-ae8e-826d664ae65a";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
     
     <meta property="og:image" content="https://media.tewahi.com/og.png">
 
